<resources>
    <string name="app_name">Demo Project</string>
    <string name="powerLink">POWERED BY</string>
    <string name="Tab_layout">Tab layout</string>
    <string name="textview">TextView</string>
    <string name="logo">logo</string>
    <string name="sign_up">LOGIN</string>
    <string name="login">Login</string>
    <string name="coldwell_banker_select">COLDWELL BANKER SELECT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="training">Training</string>
    <string name="setting_fragment">Setting fragment</string>
    <string name="welcome">WELCOME</string>
    <string name="quote_text">You can make money or you can make excuses. Which one do you prefer? \n By Tom ferry</string>
    <string name="logout">Logout</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_yet_a_member_sign_up">Not yet a member? <a href="#" style="text-decoration= none" >Sign up</a></string>
</resources>