<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EFF2F9"
    tools:context=".fragments.HomeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
        tools:listitem="@layout/item_layout" />

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/logo"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/brainxlogo"
        app:layout_constraintEnd_toStartOf="@+id/btnLogout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Rv"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/actor"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0A7EFD"
        app:cardCornerRadius="15dp"
        app:contentPadding="5dp"
        app:cardBackgroundColor="#007AFF"
        app:layout_constraintEnd_toEndOf="@+id/Rv"
        app:layout_constraintStart_toStartOf="@+id/Rv"
        app:layout_constraintTop_toBottomOf="@+id/Rv">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/quote_text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>