<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
        name="loginActivity"
        type="com.example.demoproject.LoginActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="20dp"
            android:paddingTop="5dp"
            tools:context=".LoginActivity">

            <ImageView
                android:id="@+id/Logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img" />

            <TextView
                android:id="@+id/TvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="63dp"
                android:fontFamily="@font/geometosneuebold"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Logo" />

            <EditText
                android:id="@+id/TvEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/email"
                android:inputType="textPersonName|textEmailAddress"
                android:padding="20dp"
                android:text="stage_agent@mailinator.com"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TvSignUp" />

            <EditText
                android:id="@+id/TvPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/password"
                android:inputType="textPersonName|textPassword"
                android:padding="20dp"
                android:text="123456"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TvEmail" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="#1F69FF"
                android:fontFamily="@font/ubuntu_medium"
                android:padding="15dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TvPassword" />


            <TextView
                android:id="@+id/TvPoweredBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/powerLink"
                android:textColor="#2573D5"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/img_1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="29dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TvEmail"
                app:srcCompat="@drawable/eye" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/forgot_password"
                android:textColor="#2573D5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/TvPassword"
                app:layout_constraintTop_toBottomOf="@+id/TvPassword" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/not_yet_a_member_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>